src/objects/ints__Site_Account__c.object
<CustomObject>
    <fields>
        <fullName>ints__Account_Current_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Account Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__Account_Holder_Name__c</fullName>
        <label>Account Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Account_Number__c</fullName>
        <label>Account Number</label>
        <length>170</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Bank_Account_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bank Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ints__Bank_Account_ID__c</fullName>
        <label>Bank Account ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ints__Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Financial_Institute_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Item_Account_Id__c</fullName>
        <label>Item Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Site_Id__c</fullName>
        <label>Site Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Site_Name__c</fullName>
        <label>Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Yodlee_Call__c</fullName>
        <label>Yodlee Call</label>
        <referenceTo>ints__Yodlee_Call__c</referenceTo>
        <relationshipLabel>Site Accounts</relationshipLabel>
        <relationshipName>Site_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Site Account</label>
    <nameField>
        <displayFormat>SAD-{000000}</displayFormat>
        <label>Site Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>